Fixed tooltip width bug causing text overflow

--- a/mainsite/staticfiles/mainsite/css/base.css
+++ b/mainsite/staticfiles/mainsite/css/base.css
@@ -306,6 +306,7 @@ body:not(.covid-warning-disabled) .rona-disabled.link {
 .custom-tooltip {
   position: relative;
   display: inline-block;
+  max-width: 100%;
 }
 
 /* Tooltip text */
